fix pin_underlay z-index issue

--- a/main.css
+++ b/main.css
@@ -311,6 +311,7 @@ div.track {
     width: 100%;
     padding: 0;
     margin: 0;
+    z-index: 0;
 }
 div.pin_underlay {
     width: 100%;
